add code to check in which kantons the cities are

--- a/citykon.ipynb
+++ b/citykon.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "6041e9b3-e4fb-487f-b717-a59db489ccb3",
    "metadata": {},
    "outputs": [
@@ -563,11 +563,328 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "67c33cb9-fa4f-43e4-901e-6ac6b5b6266a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ortschaftsname</th>\n",
+       "      <th>PLZ</th>\n",
+       "      <th>Zusatzziffer</th>\n",
+       "      <th>Gemeindename</th>\n",
+       "      <th>BFS-Nr</th>\n",
+       "      <th>E</th>\n",
+       "      <th>N</th>\n",
+       "      <th>Sprache</th>\n",
+       "      <th>Validity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kantonskürzel</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AG</th>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AI</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BE</th>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BL</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FR</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JU</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LU</th>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NW</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OW</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SG</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SH</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SO</th>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SZ</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TG</th>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VS</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZG</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZH</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Ortschaftsname  PLZ  Zusatzziffer  Gemeindename  BFS-Nr   E  \\\n",
+       "Kantonskürzel                                                                \n",
+       "AG                         44   44            44            44      44  44   \n",
+       "AI                          1    1             1             1       1   1   \n",
+       "AR                          1    1             1             1       1   1   \n",
+       "BE                         63   63            63            63      63  63   \n",
+       "BL                          9    9             9             9       9   9   \n",
+       "FR                          3    3             3             3       3   3   \n",
+       "JU                          1    1             1             1       1   1   \n",
+       "LU                         23   23            23            23      23  23   \n",
+       "NW                          1    1             1             1       1   1   \n",
+       "OW                          3    3             3             3       3   3   \n",
+       "SG                         31   31            31            31      31  31   \n",
+       "SH                          1    1             1             1       1   1   \n",
+       "SO                         26   26            26            26      26  26   \n",
+       "SZ                          3    3             3             3       3   3   \n",
+       "TG                         40   40            40            40      40  40   \n",
+       "VS                          1    1             1             1       1   1   \n",
+       "ZG                          1    1             1             1       1   1   \n",
+       "ZH                         31   31            31            31      31  31   \n",
+       "\n",
+       "                N  Sprache  Validity  \n",
+       "Kantonskürzel                         \n",
+       "AG             44       44        44  \n",
+       "AI              1        1         1  \n",
+       "AR              1        1         1  \n",
+       "BE             63       63        63  \n",
+       "BL              9        9         9  \n",
+       "FR              3        3         3  \n",
+       "JU              1        1         1  \n",
+       "LU             23       23        23  \n",
+       "NW              1        1         1  \n",
+       "OW              3        3         3  \n",
+       "SG             31       31        31  \n",
+       "SH              1        1         1  \n",
+       "SO             26       26        26  \n",
+       "SZ              3        3         3  \n",
+       "TG             40       40        40  \n",
+       "VS              1        1         1  \n",
+       "ZG              1        1         1  \n",
+       "ZH             31       31        31  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities[cities[\"Ortschaftsname\"].str.contains(\"wil\\s*\", regex=True, flags=re.IGNORECASE)]\\\n",
+    "    .groupby(['Kantonskürzel']).count()"
+   ]
   }
  ],
  "metadata": {
